--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://tempo-reporter.local
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Europe/Riga
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
