--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Lumen
+APP_NAME="Tempo Reporter"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -19,11 +19,12 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=maildev
+MAIL_PORT=25
 MAIL_USERNAME=
 MAIL_PASSWORD=
+# Remove "tsl" encryption when working locally with maildev
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=hello@example.com
-MAIL_FROM_NAME="Example app"
+MAIL_FROM_ADDRESS=noreply@tempo-reporter.com
+MAIL_FROM_NAME="Tempo Reporter"
 
